# sickgnal-client

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build_android_tui.sh  flake.nix  storage.salt
.cargo/: config.toml
app/sickgnal_cli/: Cargo.toml  TODO.md
app/sickgnal_cli/src/: cli.rs  main.rs
app/sickgnal_cli/ui/: app.slint
app/sickgnal_cli/ui/components/: ConversationItem.slint  ConversationList.slint  ImageButton.slint  MenuButton.slint  MessageBubble.slint
app/sickgnal_cli/ui/layout/: Configuration.slint  Conservation.slint  Log.slint  Main.slint
app/sickgnal_cli/ui/models/: Chat.slint
app/sickgnal_gui/: Cargo.toml  README.md  TODO.md  storage.salt
app/sickgnal_gui/src/: converters.rs  events.rs  lib.rs  main.rs  main_.rs  sdk_runner.rs  ui_helpers.rs
app/sickgnal_gui/src/callbacks/: after_sdk.rs  auth.rs  before_sdk.rs  mod.rs  no_sdk.rs
app/sickgnal_gui/ui/: app.slint  theme.slint
app/sickgnal_gui/ui/components/: AddMemberDialog.slint  Button.slint  ChatInput.slint  ConversationItem.slint  ConversationList.slint  ErrorBanner.slint  ImageButton.slint  MessageBubble.slint  MessageMenu.slint  NewConvOrGroupDialog.slint  NewConversationDialog.slint  StatusIcon.slint  ThemeSwitcher.slint
app/sickgnal_gui/ui/layout/: Configuration.slint  Conversation.slint  ConversationSettings.slint  Log.slint  Main.slint  ProfileSelect.slint
app/sickgnal_gui/ui/models/: Chat.slint  Conversation.slint  I18n.slint  Message.slint  Peer.slint  Profile.slint  Status.slint
app/sickgnal_test/: Cargo.toml
app/sickgnal_test/src/: main.rs  sdk_bridge_test.rs
app/sickgnal_test/tests/: integration.rs
app/sickgnal_test/tests/common/: mod.rs
app/sickgnal_tui/: Cargo.toml  env_log_var.sh  log_2.txt  log_3.txt
app/sickgnal_tui/src/: app.rs  main.rs  sdk_bridge.rs  ui.rs
app/sickgnal_tui/src/screens/: auth.rs  chat.rs  conversation_info.rs  conversations.rs  mod.rs  profile.rs
app/test_tls/: .gitignore  Cargo.toml  README.md  gen_certs.sh  server.key  start_server.sh
app/test_tls/server/: start_server.sh
app/test_tls/src/: cli.rs  error.rs  main.rs
configs/: settings.yml
lib/sickgnal_core/: Cargo.toml  README.md
lib/sickgnal_core/src/: lib.rs  main.rs
lib/sickgnal_core/src/chat/: chat_runner.rs  event.rs  message.rs  mod.rs
lib/sickgnal_core/src/chat/client/: builder.rs  client.rs  client_old.rs  error.rs  event.rs  mod.rs  state.rs  struct.rs  worker.rs
lib/sickgnal_core/src/chat/dto/: conversation.rs  mod.rs
lib/sickgnal_core/src/chat/message/: mod.rs  struct.rs
lib/sickgnal_core/src/chat/storage/: error.rs  mod.rs  model.rs  tests.rs  trait.rs
lib/sickgnal_core/src/e2e/: kdf.rs  keys.rs  message.rs  mod.rs  peer.rs
lib/sickgnal_core/src/e2e/client/: client.rs  client_handle.rs  error.rs  message_stream.rs  mod.rs  payload_cache.rs  session.rs  state.rs  sync_iterator.rs
lib/sickgnal_core/src/e2e/client/workers/: mod.rs  receive.rs  send.rs
lib/sickgnal_core/src/e2e/keys/: memory_storage.rs  mod.rs  storage_backend.rs
lib/sickgnal_core/src/e2e/keys/storage_backend/: mod.rs  tests.rs
lib/sickgnal_core/src/e2e/message/: encrypted_payload.rs  message.rs  mod.rs  serde.rs
lib/sickgnal_core/src/e2e/message_stream/: message_stream.rs  mod.rs  raw_json.rs
lib/sickgnal_core/tests/: mock_infra_smoke.rs  mock_storage_contract.rs  new_session.rs
lib/sickgnal_core/tests/common/: fixtures.rs  mock_message_stream.rs  mock_storage.rs  mod.rs
lib/sickgnal_insecure_tls/: Cargo.toml  README.md
lib/sickgnal_insecure_tls/src/: codec.rs  error.rs  hex_display.rs  lib.rs  macros.rs  reader.rs  u24.rs
lib/sickgnal_insecure_tls/src/client/: config.rs
lib/sickgnal_insecure_tls/src/client/stream/: tls_stream.rs
lib/sickgnal_insecure_tls/src/connection/: connection.rs  decryption_state.rs  encryption_state.rs  mod.rs  receiver.rs  sender.rs  state.rs
lib/sickgnal_insecure_tls/src/connection/state/: connected.rs  mod.rs  wait_certificate.rs  wait_certificate_verify.rs  wait_encrypted_extensions.rs  wait_finished.rs  wait_server_hello.rs
lib/sickgnal_insecure_tls/src/crypto/: ciphersuite.rs  keyshare.rs  mod.rs
lib/sickgnal_insecure_tls/src/msgs/: certificate.rs  client_hello.rs  handhake.rs  mod.rs  server_hello.rs
lib/sickgnal_insecure_tls/src/record_layer/: mod.rs  record.rs
lib/sickgnal_insecure_tls/src/record_layer/deframer/: handshake.rs  mod.rs
lib/sickgnal_sdk/: Cargo.toml  README.md
lib/sickgnal_sdk/src/: client.rs  event.rs  lib.rs  tls.rs
lib/sickgnal_sdk/src/account/: account.rs  mod.rs  profile.rs
lib/sickgnal_sdk/src/client/: client.rs  error.rs  handle.rs  mod.rs  sdk.rs  sync_bridge.rs
lib/sickgnal_sdk/src/dto/: conversation_entry.rs  mod.rs
lib/sickgnal_sdk/src/storage/: config.rs  crypto.rs  error.rs  key.rs  mod.rs  schema.rs  sqlite.rs
lib/sickgnal_sdk/src/storage/store/: account.rs  conversation.rs  ephemeral_keys.rs  message.rs  mod.rs  peers.rs  session.rs  session_keys.rs
storage/: alice.salt  bob.salt  charlie.salt  credentials.txt  db.sqlite-shm  db.sqlite-wal
storage/alice/: credentials.txt  db.sqlite  db.sqlite-shm  db.sqlite-wal
storage/bob/: credentials.txt  db.sqlite  db.sqlite-shm  db.sqlite-wal
storage/charlie/: credentials.txt  db.sqlite  db.sqlite-shm  db.sqlite-wal
