[package]
name = "sickgnal_cli"
version = "0.1.0"
edition = "2024"
publish.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
sickgnal_sdk = { path = "../../lib/sickgnal_sdk", version = "0.1.0" }
tokio = { version = "1.49.0", features = ["full"] }
slint = "1.3.2" 

[build-dependencies]
slint-build = "1.3.2"