[package]
name = "sickgnal_cli"
version = "0.1.0"
edition = "2024"
publish.workspace = true
license.workspace = true

[dependencies]
sickgnal_sdk = { path = "../../lib/sickgnal_sdk", version = "0.1.0" }
sickgnal_core = { path = "../../lib/sickgnal_core", version = "0.1.0" }
tokio = { version = "1.49.0", features = ["full"] }
slint = "1.3.2"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
chrono = "0.4.44"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

[build-dependencies]
slint-build = "1.3.2"
