[package]
name = "sickgnal_gui"
version = "0.1.0"
edition = "2024"
publish.workspace = true
license.workspace = true

[features]
default = ["desktop"]
desktop = [
    "slint/backend-winit",
    "slint/renderer-femtovg",
]
android = [
    "slint/backend-android-activity-06",
]

[lib]
name = "sickgnal_gui"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sickgnal_gui"
path = "src/main.rs"
required-features = ["desktop"]

[package.metadata.android]
min_sdk_version = 33      # minimum Android version your app supports
target_sdk_version = 33   # what you're building against

[package.metadata.android.signing.release]
path = "/home/aristide/.android/debug.keystore"
keystore_password = "android"
alias = "androiddebugkey"
key_password = "android"
[package.metadata.android.sdk]
min_sdk_version = 33
target_sdk_version = 33
compile_sdk_version = 33

[dependencies]
sickgnal_sdk = { path = "../../lib/sickgnal_sdk", version = "0.1.0" }
sickgnal_core = { path = "../../lib/sickgnal_core", version = "0.1.0" }
tokio = { version = "1.49.0", features = ["full"] }
slint = "1.3.2"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
chrono = "0.4.44"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

[build-dependencies]
slint-build = "1.3.2"
