[package]
name = "test_tls"
version = "0.1.0"
edition = "2024"
publish.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
rustls-native-certs = "0.8.3"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-rustls = { version = "0.26.4", features = ["logging", "aws_lc_rs"], default-features = false }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
sickgnal_insecure_tls = { path = "../../lib/sickgnal_insecure_tls" }
x25519-dalek = "2.0.1"
rustls-webpki = "0.103.10"
