[package]
name = "sickgnal_core"
version = "0.1.0"
edition = "2024"
publish.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
