[package]
name = "sickgnal_core"
version = "0.1.0"
edition = "2024"
publish.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.43", features = ["serde"] }
getrandom = "0.4.1"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
