[package]
name = "sickgnal_core"
version = "0.1.0"
edition = "2024"
publish.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["alloc", "rand_core"] }
chrono = { version = "0.4.43", features = ["serde"] }
curve25519-dalek = "4.1.3"
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "serde"] }
hex = "0.4"
# futures = "0.3.32"
hkdf = "0.12.4"
lru = "0.16.3"
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["io-util", "sync"] }
tracing = "0.1.44"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "reusable_secrets", "serde"] }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
