[package]
name = "sickgnal_insecure_tls"
version = "0.1.0"
edition = "2024"
publish.workspace = true
license.workspace = true

[dependencies]
aes-gcm = "0.10.3"
futures = "0.3.31"
rand = "0.8.0"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
x25519-dalek = "2.0.1"
