[package]
name = "sickgnal_sdk"
version = "0.1.0"
edition = "2024"
publish.workspace = true
license.workspace = true

[dependencies]
sickgnal_core = { path = "../sickgnal_core" }
tokio = { version = "1.49.0", features = ["full"] }
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
async-std = "1.13.2"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
rusqlite = "0.38.0"
