[package]
name = "sickgnal_sdk"
version = "0.1.0"
edition = "2024"
publish.workspace = true
license.workspace = true

[dependencies]
sickgnal_core = { path = "../sickgnal_core" }
sickgnal_insecure_tls = { path = "../sickgnal_insecure_tls" }
tokio = { version = "1.49.0", features = ["full"] }
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
argon2 = "0.5.3"
getrandom = "0.4.2"
tempfile = "3.26.0"
hex = "0.4.3"
serde = "1.0.228"
bincode = "1.3.3"
tokio-rustls = "0.26.4"
rustls-native-certs = "0.8.3"
rusqlite = { version = "0.39.0", features = ["bundled-sqlcipher"] }
const_format = "0.2.35"
serde_json = "1.0.149"
